--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_script:
     pip install 'travis-cargo<0.2' --user &&
     export PATH=$HOME/.local/bin:$PATH
 script:
+  - export GIISTR_DATABASE_URL=./travis/giistr.sqlite
   - cargo build
 env:
   global:
