--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ addons:
 before_script:
   - pip install 'travis-cargo<0.2' --user
   - export PATH=$HOME/.local/bin:$PATH
+  - export PATH=$PATH:/home/travis/.cargo/bin
   - psql -c 'create database giistr;' -U postgres
   - cargo install diesel_cli
   - diesel migration run
