--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ before_script:
   - diesel migration run
 script:
   - cargo build
+  - cargo build --release
 env:
   global:
     - TRAVIS_CARGO_NIGHTLY_FEATURE=""
