--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ env_logger = "0.3.4"
 hyper = "0.9.10"
 iron = "0.4.0"
 log = "0.3.6"
+mount = "0.2.1"
 router = "0.2.0"
 serde = "^0.8"
 serde_json = "^0.8"
