update build to last rust nightly

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,9 @@ iron = "0.4.0"
 log = "0.3.6"
 mount = "0.2.1"
 router = "0.2.0"
-serde = "^0.8"
-serde_json = "^0.8"
-serde_macros = "^0.8"
+serde = "0.8.7"
+serde_json = "0.8.2"
+serde_macros = "0.8.7"
 time = "0.1.35"
 unicase = "1.4.0"
 diesel = { git = "https://github.com/jeremyletang/diesel", default-features = false, features = ["postgres"] }
