use 127.0.0.1 and bind port from PORT env variable. change db addr env variable to VCAP_SERVICES. update to last version of backit

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,4 @@ env:
   global:
     - TRAVIS_CARGO_NIGHTLY_FEATURE=""
     - DATABASE_URL=postgres://postgres@localhost/giistr
-    - GIISTR_DATABASE_URL=postgres://postgres@localhost/giistr
+    - VCAP_SERVICES=postgres://postgres@localhost/giistr
