--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ backit = { git = "https://github.com/jeremyletang/backit", features = ["postgres
 #backit = { path = "../backit", features = ["postgres"]}
 chrono = "0.2"
 env_logger = "0.3.4"
-hyper = "0.9.10"
+hyper = { version = "0.9.10", default-features = false }
 iron = "0.4.0"
 log = "0.3.6"
 mount = "0.2.1"
