--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ before_script:
 - cargo install diesel_cli
 - diesel migration run
 script:
-- cargo build
-- cargo build --release
+- cargo build -j8
+- cargo build --release -j8
 env:
   global:
   - TRAVIS_CARGO_NIGHTLY_FEATURE=""
